# shire_blocker

./: Cargo.toml  LICENSE  README.md  WORKLOG.md  deepwork  plist_info.md  script.zsh
extension/: background.js  content.js  manifest.json
src/: commands.rs  config.rs  daemon.rs  lib.rs  main.rs  manifest_setup.rs  service.rs  state.rs
tests/: bridge_test.rs  cli_test.rs  tests.rs
tests/fixtures/: shire.toml
