[package]
name = "shire_blocker"
version = "0.1.0"
edition = "2024"
default-run = "shire"

[[bin]]
name = "shire"
path = "src/main.rs"

[[bin]]
name = "shire_bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "shire_daemon"
path = "src/bin/daemon/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
toml = "0.9.2"
launchctl = "0.3.2"
clap = { version = "4.5.41", features = ["derive"] }
